--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1716,24 +1716,24 @@ Example Calls:
 {{%- endif -%}}
 # Strip any search characters in the key arg so that the key can be replaced without
 # adding any search characters to the config file.
-stripped_key=$(sed 's/[\^=\$,;+]*//g' <<< "{{{ key }}}")
+stripped_key="$(sed 's/[\^=\$,;+]*//g' <<< "{{{ key }}}")"
 
 # shellcheck disable=SC2059
-printf -v formatted_output "{{{ format }}}" "$stripped_key" "{{{ value }}}"
+printf -v formatted_output "{{{ format }}}" "${stripped_key}" "{{{ value }}}"
 
 # If the key exists, change it. Otherwise, add it to the config_file.
 # We search for the key string followed by a word boundary (matched by \>),
 # so if we search for 'setting', 'setting2' won't match.
 if LC_ALL=C grep -q -m 1 -i -e "{{{ key }}}\\>" "{{{ config_file }}}"; then
-    escaped_formatted_output=$(sed -e 's|/|\\/|g' <<< "$formatted_output")
-    LC_ALL=C sed -i --follow-symlinks "s/{{{ key }}}\\>.*/$escaped_formatted_output/gi" "{{{ config_file }}}"
+    escaped_formatted_output="$(sed -e 's|/|\\/|g' <<< "${formatted_output}")"
+    LC_ALL=C sed -i --follow-symlinks "s/{{{ key }}}\\>.*/${escaped_formatted_output}/gi" "{{{ config_file }}}"
 else
     {{{ bash_ensure_nl_at_eof(config_file) | indent }}}
     {{%- if cce_identifiers and 'cce' in cce_identifiers %}}
     {{{ set_cce_value() }}}
     printf '# Per %s: Set %s in %s\n' "${cce}" "${formatted_output}" "{{{ config_file }}}" >> "{{{ config_file }}}"
     {{%- endif %}}
-    printf '%s\n' "$formatted_output" >> "{{{ config_file }}}"
+    printf '%s\n' "${formatted_output}" >> "{{{ config_file }}}"
 fi
 {{%- endmacro -%}}
 
