--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1587,7 +1587,7 @@ if ! grep "$mount_point_match_regexp" /etc/fstab; then
                 | sed -E "s/(rw|defaults|seclabel|{{{ mount_opt }}})(,|$)//g;s/,$//")
     [ "$previous_mount_opts" ] && previous_mount_opts+=","
     # In iso9660 filesystems mtab could describe a "blocksize" value, this should be reflected in fstab as "block"
-    if [  {{{ type }}} == "iso9660" ] ; then
+    if [  "{{{ type }}}" == "iso9660" ] ; then
         previous_mount_opts=$(sed 's/blocksize=/block=/' <<< "$previous_mount_opts")
     fi
     echo "{{{ fs_spec }}} {{{ mount_point }}} {{{ type }}} defaults,${previous_mount_opts}{{{ mount_opt }}} 0 0" >> /etc/fstab
