--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1754,7 +1754,7 @@ key_regex="{{{ key_regex ~ word_boundary }}}"
 {{%- endif %}}
 
 # shellcheck disable=SC2059
-printf -v formatted_output "{{{ format }}}" "{{{ key }}}" "{{{ value }}}"
+printf -v formatted_output "{{{ format }}}" "{{{ key }}}" "$(tr -d '\n' <<< "{{{ value }}}")"
 
 # If the key exists, change it. Otherwise, add it to the config_file.
 {{%- if word_boundary == "" %}}
