--- a/shared/macros/10-oval.jinja
+++ b/shared/macros/10-oval.jinja
@@ -32,13 +32,13 @@ Generates the :code:`<affected>` tag for OVAL check using correct product platfo
 :param separator_regex: Regular expression to be used as the separator of parameter and value in a configuration file. If spaces are allowed, this should be included in the regular expression.
 :type separator_regex: str
 :param missing_parameter_pass: If set, the check will also pass if the parameter is not present in the configuration file (default is applied).
-:type missing_parameter_pass: boolean
+:type missing_parameter_pass: bool
 :param application: The application which the configuration file is being checked. Can be any value and does not affect the actual OVAL check.
 :type application: str
 :param multi_value: If set, it means that the parameter can accept multiple values and the expected value must be present in the current list of values.
-:type multi_value: boolean
+:type multi_value: bool
 :param missing_config_file_fail: If set, the check will fail if the configuration is not existent in the system.
-:type missing_config_file_fail: boolean
+:type missing_config_file_fail: bool
 :param section: If set, the parameter will be checked only within the given section defined by [section].
 :type section: str
 :param quotes: If non-empty, one level of matching quotes is considered when checking the value. See comment of oval_line_in_file_state for more info.
